--- a/client/src/styles/utils/variables.scss
+++ b/client/src/styles/utils/variables.scss
@@ -2,11 +2,13 @@
 $default-color: #F0FFF0;
 $header-color: #1E90FF;
 $app-border-color: #B0E0E6;
+$input-form-color: #ADD8E6;
+$input-form-focus-color: #48D1CC;
 //
 $brand-text: #b1b0b0;
 
 //break-points
-$break-point-small-width: 960px;
+$break-point-small-width-auth: 920px;
 $break-point-small-height: 620px; 
 //Sizes
 $font-size-base:16px;
