--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -1,3 +1,9 @@
 @import "./utils/variables.scss";
 @import "./base/base";
 @import "../shared/containers/app/style.scss";
+@import "../shared/containers/auth/style.scss";
+@import "../shared/containers/form/style.scss";
+@import "../shared/components/label/style.scss";
+@import "../shared/components/input/style.scss";
+@import "../shared/components/button/style.scss";
+
