--- a/client/src/shared/components/input/style.scss
+++ b/client/src/shared/components/input/style.scss
@@ -1,9 +1,12 @@
 .input-wrapper{
-    margin-top: 1rem;
+    margin-top: 1.5rem;
     transition: 0.8s;
     input{
+        margin: 0;
         width: 100%;
         height: 100%;
+        padding-left: .5rem;
+        padding-right: .5rem;
         font-size: inherit;
         box-shadow: none;
         background-color: $input-form-color;
@@ -43,6 +46,9 @@
         border-color: red;
         color:red;
     } 
+    .input-error::placeholder{
+        color:red;
+    }
     .error-info{
         overflow-wrap: break-word;
         color: red;
