Set connections between client and server

--- a/client/src/shared/components/button/style.scss
+++ b/client/src/shared/components/button/style.scss
@@ -29,6 +29,12 @@
         height: 100%;
     }
 
+    &--disabled {
+        width: 100%;
+        height: 100%;
+        background-color: #ccc;
+    }
+
     &--link{
         text-decoration: underline;
         border: 0;
