--- a/client/src/shared/components/button/style.scss
+++ b/client/src/shared/components/button/style.scss
@@ -9,6 +9,8 @@
     font-weight: bold;
     position: relative;
 
+    &:focus {outline:0;}
+
     &--default{
         width:100%;
         height: 100%;
