--- a/client/src/shared/components/input/style.scss
+++ b/client/src/shared/components/input/style.scss
@@ -1,45 +1,55 @@
 .input-wrapper{
     display: flex;
     flex-direction: column;
-    input{
-        margin: 0;
-        width: 100%;
-        height: 100%;
-        padding-left: .5rem;
-        padding-right: .5rem;
-        font-size: inherit;
-        box-shadow: none;
-        background-color: $input-form-color;
-        border-radius: 0px;
-        border-color: #ccc;
-        border-style: none none solid none;
-        color: $header-color;
-        transition:all .8s;
-    }
-    input:focus{
-        box-shadow: none;
-        outline: none;
-        border-color: $header-color;
-        font-weight: bold;
-    }
-    input::placeholder{
-        color: $header-color
-    }
 
-    textarea{
-        width: 100%;
-        height: 100%;
-        letter-spacing: 0.1rem;
-        font-size: inherit;
-        box-shadow: none;
-        background-color: $input-form-color;
-        resize:none;
-        overflow: auto;
-        outline: none;
-        -moz-appearance: none;
-        border:0;
-        padding: 0.25rem;
-        color: $header-color;
+    .input-content{
+        position: relative;
+        display: flex;
+        align-items: center;
+        input{
+            margin: 0;
+            width: 100%;
+            height: 100%;
+            padding-left: .5rem;
+            padding-right: .5rem;
+            font-size: inherit;
+            box-shadow: none;
+            background-color: $input-form-color;
+            border-radius: 0px;
+            border-color: #ccc;
+            border-style: none none solid none;
+            color: $header-color;
+            transition:all .8s;
+        }
+        input:focus{
+            box-shadow: none;
+            outline: none;
+            border-color: $header-color;
+            font-weight: bold;
+        }
+        input::placeholder{
+            color: $header-color
+        }
+
+        textarea{
+            width: 100%;
+            height: 100%;
+            letter-spacing: 0.1rem;
+            font-size: inherit;
+            box-shadow: none;
+            background-color: $input-form-color;
+            resize:none;
+            overflow: auto;
+            outline: none;
+            -moz-appearance: none;
+            border:0;
+            padding: 0.25rem;
+            color: $header-color;
+        }
+        .input-icon{
+            background-color:$input-form-color;
+            position: absolute;
+        }
     }
 
     .input-error{
