--- a/client/src/shared/containers/app/style.scss
+++ b/client/src/shared/containers/app/style.scss
@@ -21,17 +21,24 @@
     }
     .app-container{
         position: absolute;
-        top: 5%;
+        top: 3%;
         height: 90%;
         width: 100%;
         z-index: 1;
-        max-width: 60rem;
+        max-width: 70rem;
         
         .logo-container{
             background-color: $header-color;
             width: 100%;
-            height: 7%;
-            margin-bottom: 1rem;
+            height: 3%;
+            margin-bottom: 1.5rem;
+            display: flex;
+            .app-name{
+                margin-top: .2rem;
+                height: 100%;
+                margin-left: 1rem;
+                font-weight: bolder;
+            }
         }
 
         .app-content{
@@ -47,22 +54,4 @@
     }
 }
 
-/* @media (max-width: $break-point-small-width + 1){
-   .app-wrapper{
-        min-width: 18rem;
-        .app-container{
-            min-width: 10rem;
-        }
-   }
-} 
-@media (max-height: $break-point-small-height + 1){
-    .app-wrapper{
-        min-height: 24rem;
-        .app-container{
-            min-height: 15rem;
-            min-width: 15rem;
-        }
-    }
-}
 
-*/
