--- a/client/src/styles/utils/variables.scss
+++ b/client/src/styles/utils/variables.scss
@@ -8,7 +8,7 @@ $input-form-focus-color: #48D1CC;
 $brand-text: #b1b0b0;
 
 //break-points
-$break-point-small-width-auth: 920px;
+$break-point-small-width: 920px;
 $break-point-small-height: 620px; 
 //Sizes
 $font-size-base:16px;
