--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -6,6 +6,7 @@
 @import "../shared/components/label/style.scss";
 @import "../shared/components/input/style.scss";
 @import "../shared/components/button/style.scss";
+@import "../shared/components/drawer/style.scss";
 @import "../shared/components/drop-down-menu/style.scss";
 @import "../entries/chat/components/user-info-component/index.scss";
 @import "../entries/chat/wrappers/action-wrapper/index.scss";
