--- a/client/src/entries/chat/components/user-info-component/index.scss
+++ b/client/src/entries/chat/components/user-info-component/index.scss
@@ -1,12 +1,18 @@
 .user-info{
     display: flex;
-    flex-direction: column;
     margin: .2rem .2rem;
-    width:100%;
+    width: auto;
+    background-color: inherit;
+
+    &.column-mode {
+        flex-direction: column;
+    }
+    &.row-mode {
+        flex-direction: row;
+    }
+
     .user-info-profile{
         border-radius: 50%;
-        width: 4rem;
-        height: 4rem;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -17,7 +23,7 @@
     .user-info-nickname{
         margin-top: .5rem;
         width: 100%;
-        height: 2rem;
+        height: auto;
         margin-left: .6rem;
     }
 }
