--- a/client/src/entries/chat/wrappers/chat-wrapper/index.scss
+++ b/client/src/entries/chat/wrappers/chat-wrapper/index.scss
@@ -1,4 +1,32 @@
-.chat-wrapper{
+.chat-wrapper {
     border-radius: 0 .5rem .5rem 0;
     width: 70%;
+    height: 100%;
+    .chat-container {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        height: 100%;
+        .chat-header {
+            border-radius: 0 .5rem 0 0;
+
+            background-color: #4682B4;
+            width: 100%;
+            height: 7%;
+        }
+
+        .chat-conversation {
+            background-color: $default-color;
+            height: 81%;
+            width: 100%;
+        }
+
+        .chat-footer {
+            border-radius: 0 0 0.5rem 0;
+
+            background-color: #4682B4;
+            height: 12%;
+            width: 100%;
+        }
+    }
 }
