CLIENT: adjustments conversation redux and jsx, getting from server conversations

--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -7,8 +7,11 @@
 @import "../shared/components/input/style.scss";
 @import "../shared/components/button/style.scss";
 @import "../shared/components/drawer/style.scss";
+@import "../shared/components/profile-circle/style.scss";
 @import "../shared/components/drop-down-menu/style.scss";
 @import "../entries/chat/components/user-info-component/index.scss";
+@import "../entries/chat/components/conversation-item-cart/style.scss";
+@import "../entries/chat/containers/conversation-list/style.scss";
 @import "../entries/chat/wrappers/action-wrapper/index.scss";
 @import "../entries/chat/wrappers/chat-wrapper/index.scss";
 
