--- a/client/src/entries/chat/wrappers/chat-wrapper/index.scss
+++ b/client/src/entries/chat/wrappers/chat-wrapper/index.scss
@@ -9,7 +9,6 @@
         height: 100%;
         .chat-header {
             border-radius: 0 .5rem 0 0;
-
             background-color: #4682B4;
             width: 100%;
             height: 7%;
@@ -23,10 +22,25 @@
 
         .chat-footer {
             border-radius: 0 0 0.5rem 0;
-
             background-color: #4682B4;
             height: 12%;
             width: 100%;
         }
+    }
+    .center-elem{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .chat-conversation-base{
+        height: 100%;
+        width: 100%;
+    }
+    .chat-conversation-info-message{
+        width: auto;
+        height: auto;
+        padding: .5rem;
+        border-radius: 1rem;
+        background-color: $input-form-color;
     }
 }
