--- a/client/src/entries/chat/components/user-info-component/index.scss
+++ b/client/src/entries/chat/components/user-info-component/index.scss
@@ -2,6 +2,7 @@
     display: flex;
     margin: .2rem .2rem;
     width: auto;
+    height: auto;
     background-color: inherit;
 
     &.column-mode {
