--- a/client/src/entries/chat/wrappers/chat-wrapper/index.scss
+++ b/client/src/entries/chat/wrappers/chat-wrapper/index.scss
@@ -18,6 +18,7 @@
             background-color: $default-color;
             height: 81%;
             width: 100%;
+            margin-bottom: 1rem;
         }
 
         .chat-footer {
