--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -9,8 +9,10 @@
 @import "../shared/components/drawer/style.scss";
 @import "../shared/components/profile-circle/style.scss";
 @import "../shared/components/drop-down-menu/style.scss";
+@import "../entries/chat/components/message-component/styles.scss";
 @import "../entries/chat/components/user-info-component/index.scss";
 @import "../entries/chat/components/conversation-item-cart/style.scss";
+@import "../entries/chat/containers/message-list-container/style.scss";
 @import "../entries/chat/containers/conversation-list/style.scss";
 @import "../entries/chat/wrappers/action-wrapper/index.scss";
 @import "../entries/chat/wrappers/chat-wrapper/index.scss";
