--- a/client/src/styles/utils/variables.scss
+++ b/client/src/styles/utils/variables.scss
@@ -4,6 +4,7 @@ $header-color: #1E90FF;
 $app-border-color: #B0E0E6;
 $input-form-color: #ADD8E6;
 $input-form-focus-color: #48D1CC;
+$message-text-color: #87cefa;
 //
 $brand-text: #b1b0b0;
 
