--- a/client/src/entries/chat/containers/message-list-container/style.scss
+++ b/client/src/entries/chat/containers/message-list-container/style.scss
@@ -4,7 +4,5 @@
     width: 100%;
     height: 100%;
     overflow-y: scroll;
-    &.scrolling {
-        visibility: hidden;
-    }
+    overflow-x: none;
 }
