Implement searching new User Contact

--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -12,6 +12,7 @@
 @import "../entries/chat/components/message-component/styles.scss";
 @import "../entries/chat/components/user-info-component/index.scss";
 @import "../entries/chat/components/conversation-item-cart/style.scss";
+@import "../entries/chat/components/contact-search-item/style.scss";
 @import "../entries/chat/containers/message-list-container/style.scss";
 @import "../entries/chat/containers/conversation-list/style.scss";
 @import "../entries/chat/wrappers/action-wrapper/index.scss";
