Angular Client: create Auth Components and adjustment constant variables, add mixin-media scss file

--- a/angular-client/src/app/modules/sign-up/sign-up/sign-up.component.html
+++ b/angular-client/src/app/modules/sign-up/sign-up/sign-up.component.html
@@ -1,1 +1,6 @@
-<p>Sign Up works</p>
+<app-auth-container
+  [title]="title"
+  [redirect]="redirect"
+>
+  <app-auth-form-container [options]="options"></app-auth-form-container>
+</app-auth-container>
