--- a/angular-client/src/app/core/header/header.component.scss
+++ b/angular-client/src/app/core/header/header.component.scss
@@ -1,4 +1,5 @@
 @import "variables";
+@import "media-mixin-content";
 
 :host {
   display: block;
@@ -11,18 +12,24 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    position: relative;
 
+    
     .app-header {
       width: 100%;
       height: 18rem;
       background-color: $header-color;
+      @include _768 {
+        height: 22rem;
+      }
     }
-    .app-container { 
+
+    .app-container {
+      position: absolute; 
       width: 70%;
-      min-width: 40rem;
       height: 52rem;
       min-height: 25rem;
-      margin-top: -15rem;
+      top: 5rem;
       display: flex;
       flex-direction: column;
 
@@ -30,10 +37,15 @@
         display: flex;
         justify-content: flex-start;
         position: relative;
+
         .app-title-text{
           margin-left: .5rem;
           font-size: xx-large;
           color: white;
+        }
+
+        @include _425{
+          justify-content: center;
         }
       }
 
@@ -43,7 +55,24 @@
         border-radius: 1rem;
         box-shadow: 10px 5px 5px $app-border-color;
       }
+
+      @include _1024 {
+        width: 80%;
+      }
+
+      @include _768 {
+        width: 90%;
+      }
+
+      @include _425 {
+        width: 100%; 
+      }
     }
+    @include _425 {
+      width: 100%; 
+      min-width: 320px;
+    }
+
   }
 }
 
